--- a/DajSveApp/app/src/main/res/layout/activity_main.xml
+++ b/DajSveApp/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
+<android.support.v4.widget.DrawerLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/drawerLayout"
@@ -7,7 +8,35 @@
     android:layout_centerHorizontal="true"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:id="@+id/linearlayout">
+
+
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/my_awesome_toolbar"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:minHeight="?attr/actionBarSize"
+            android:background="#5D008C"
+            android:weightSum="1">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="right"
+                android:src="@drawable/dajsvebijeli"
+                android:layout_marginRight="20dp"/>
+
+        </android.support.v7.widget.Toolbar>
+
+
+    </LinearLayout>
+
+    <!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/relativelayout"
         android:layout_width="match_parent"
@@ -18,16 +47,31 @@
         android:paddingTop="@dimen/activity_vertical_margin"
         tools:context="com.example.filip.dajsve.Activities.MainActivity">
 
-    </RelativeLayout>
 
-    <ListView
+    </RelativeLayout>-->
+    <RelativeLayout
         android:layout_width="250dp"
         android:layout_height="match_parent"
         android:layout_gravity="left"
-        android:id="@+id/listview"
-        android:background="#FFFFFF">
-        android:textAlignment="center"
-        android:layout_marginLeft="40dp">
+        android:id="@+id/navigacija_layout">
 
-    </ListView>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="140dp"
+            android:src="@drawable/navigacijaheader"/>
+
+        <ListView
+            android:layout_width="250dp"
+            android:layout_height="match_parent"
+            android:layout_marginTop="100dp"
+            android:layout_gravity="left"
+            android:id="@+id/listview"
+            android:background="#FFFFFF"
+            android:textAlignment="center"
+            android:paddingTop="40dp">
+
+        </ListView>
+
+    </RelativeLayout>
+
 </android.support.v4.widget.DrawerLayout>
