--- a/DajSveApp/app/src/main/res/layout/activity_main.xml
+++ b/DajSveApp/app/src/main/res/layout/activity_main.xml
@@ -8,16 +8,18 @@
     android:layout_centerHorizontal="true"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:id="@+id/linearlayout">
+        android:id="@+id/linearlayout"
+        tools:context="com.example.filip.dajsve.Activities.MainActivity">
 
 
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/my_awesome_toolbar"
+            android:id="@+id/moj_header"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:minHeight="?attr/actionBarSize"
@@ -36,29 +38,36 @@
 
     </LinearLayout>
 
-    <!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/relativelayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context="com.example.filip.dajsve.Activities.MainActivity">
-
-
-    </RelativeLayout>-->
     <RelativeLayout
         android:layout_width="250dp"
         android:layout_height="match_parent"
         android:layout_gravity="left"
         android:id="@+id/navigacija_layout">
 
-        <ImageView
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="140dp"
-            android:src="@drawable/navigacijaheader"/>
+            android:layout_height="100dp"
+            android:background="#9879A8">
+
+            <SearchView
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="#A584B8"
+                android:id="@+id/searchview"/>
+
+            <Spinner
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:id="@+id/gradovi_spinner"
+
+                android:layout_marginTop="64dp"
+                android:paddingRight="30dp"
+                android:paddingLeft="30dp"
+                android:backgroundTint="#FFFFFF"/>
+
+
+        </RelativeLayout>
+
 
         <ListView
             android:layout_width="250dp"
@@ -67,8 +76,9 @@
             android:layout_gravity="left"
             android:id="@+id/listview"
             android:background="#FFFFFF"
-            android:textAlignment="center"
-            android:paddingTop="40dp">
+            android:paddingTop="25dp"
+            android:textAlignment="center">
+
 
         </ListView>
 
