--- a/DajSveApp/app/src/main/res/layout/activity_main.xml
+++ b/DajSveApp/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,12 @@
     android:layout_alignParentTop="true"
     android:layout_centerHorizontal="true"
     xmlns:android="http://schemas.android.com/apk/res/android">
+    <FrameLayout
+        android:id="@+id/mainContent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
+    </FrameLayout>
 
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -19,23 +24,6 @@
         tools:context="com.example.filip.dajsve.Activities.MainActivity">
 
 
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/moj_header"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:minHeight="?attr/actionBarSize"
-            android:background="#5D008C"
-            android:weightSum="1">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="right"
-                android:src="@drawable/dajsvebijeli"
-                android:layout_marginRight="20dp"/>
-
-        </android.support.v7.widget.Toolbar>
 
 
     </LinearLayout>
