--- a/DajSveApp/app/src/main/res/layout/sve_ponude_fragment.xml
+++ b/DajSveApp/app/src/main/res/layout/sve_ponude_fragment.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/sve_ponude_fragment" android:tag="sve_ponude_fragment_tag">
 
 
     <android.support.v7.widget.RecyclerView
