--- a/DajSveApp/app/src/main/res/layout/sve_ponude_fragment.xml
+++ b/DajSveApp/app/src/main/res/layout/sve_ponude_fragment.xml
@@ -3,11 +3,21 @@
     android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/sve_ponude_fragment" android:tag="sve_ponude_fragment_tag">
 
 
-    <android.support.v7.widget.RecyclerView
-        android:layout_height="match_parent"
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swipeContainer"
         android:layout_width="match_parent"
-        android:id="@+id/rv"
-        >
+        android:layout_height="match_parent">
 
-    </android.support.v7.widget.RecyclerView>
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:id="@+id/rv">
+
+        </android.support.v7.widget.RecyclerView>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
+
 </RelativeLayout>
