--- a/DajSveApp/app/src/main/res/layout/detalji_ponude_fragment.xml
+++ b/DajSveApp/app/src/main/res/layout/detalji_ponude_fragment.xml
@@ -80,7 +80,9 @@
             android:textSize="20sp"
             android:textColor="?android:textColorPrimaryDisableOnly"
             android:fontFamily="serif"
-            android:textAppearance="@style/TextAppearance.StatusBar.EventContent.Info" />
+            android:textAppearance="@style/TextAppearance.StatusBar.EventContent.Info"
+            android:onClick="onClick"
+            android:clickable="true" />
 
         <CheckBox
             android:layout_width="wrap_content"
